--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@svgr/webpack": "^8.1.0",
+    "critters": "^0.0.23",
     "framer-motion": "^12.31.0",
     "next": "16.1.6",
     "react": "19.2.3",
